# options-trading

./: .gitignore  download_data.py  main.py  pyproject.toml  test-polygon.ipynb
backtest_index/: backtest_ks11_ma.py  backtest_n225_ma.py  backtest_twii_ma.py  download_ks11.py  download_n225.py  download_spx.py  download_twii.py  index_backtester.py  setup.py
backtest_index/results/: ks11_ma_backtest_results.csv  n225_ma_backtest_results.csv  spx_jan_backtest_results.csv  twii_ma_backtest_results.csv
backtest_options/: download_data.py  main.py  setup.py
backtest_options/results/: qqq_short_put_results.csv
tests/: test_main.py
